Update thumbnail de-/select hover button on selection change

Summary:
The de-/select (`-`/`+`) hover button of the thumbnails in Browse
Mode or thumbnail bar in View Mode does not reflect the actual
selection state sometimes.
This patch updates the button state when the selection changed.

BUG: 394406
FIXED-IN: 18.04.2

Test Plan:
# Open Gwenview in Browse Mode or View Mode with visible thumbnail bar
# Use e.g. {key Ctrl Click} to de-/select images or
  move selection by keyboard
# `-`/`+` button of item under mouse pointer should
  reflect the actual selection state

Reviewers: #gwenview, huoni

Reviewed By: #gwenview, huoni

Subscribers: rkflx

Differential Revision: https://phabricator.kde.org/D13010